# sql-analyst-env

./: .gitignore  Dockerfile  README.md  inference.py  main.py  make_awesome.py  openenv.yaml  pyproject.toml  requirements.txt  results.json  seed.py  test.py  ui.py
data/: ecommerce.db
server/: app.py
